--- a/src/global/app.css
+++ b/src/global/app.css
@@ -93,3 +93,6 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
+
+/* FirebaseUI */
+@import '~firebaseui/dist/firebaseui.css';
